# wh

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20260409_0001_initial_schema.py  20260409_0002_credit_ledger_entry_status.py
app/: __init__.py  bootstrap.py  main.py  run_api.py  run_migrate.py  run_worker.py
app/api/: health.py  router.py  webhooks.py
app/bot/: handlers.py  keyboards.py  runtime.py
app/core/: config.py  logging.py
app/db/: base.py  models.py  session.py
app/domain/: __init__.py  enums.py
app/infra/: ai_providers.py  storage.py
app/prompts/: catalog.json
app/repositories/: jobs.py
app/schemas/: jobs.py
app/services/: admin.py  alerts.py  analytics.py  billing.py  credits.py  job_orchestrator.py  job_runner.py  job_service.py  ledger.py  notifications.py  pricing_policy.py  prompt_engine.py  user_context.py
app/tasks/: __init__.py  image_jobs.py  subscriptions.py
app/workers/: celery_app.py
deploy/: Dockerfile  prometheus.yml
docs/: blueprint.md  bothost-deploy.md  secrets-strategy.md  staging-checklist.md
lumiaflow_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_alerting.py  test_billing_and_admin.py  test_integration_job_pipeline.py  test_job_runner.py  test_pricing_policy.py  test_prompt_engine.py  test_readiness.py
